--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "private": true,
   "homepage": "https://alicankustemur.github.io",
   "dependencies": {
-    "gh-pages": "^1.0.0",
+    "gh-pages": "1.0.0",
     "jquery": "3.2.1",
     "jquery-ui": "1.12.1",
     "moment": "2.18.1",
     "react": "15.6.1",
     "react-bootstrap": "0.31.1",
-    "react-disqus-thread": "^0.4.0",
+    "react-disqus-thread": "0.4.0",
     "react-dom": "15.6.1",
     "react-router": "3.0.5",
     "react-tagcloud": "1.2.0"
